FDG-5967 Fixed spacing under Nav

--- a/src/layouts/explainer/explainer-components/explainer-sub-nav/explainer-sub-nav.module.scss
+++ b/src/layouts/explainer/explainer-components/explainer-sub-nav/explainer-sub-nav.module.scss
@@ -13,7 +13,7 @@ $chevronWidth: $chevronHeight/3;
   color: #fff;
   max-width: $breakpoint-lg;
   display: flex;
-  margin: .5rem auto 2rem auto;
+  margin: .5rem auto 1rem auto;
   justify-content: center;
 }
 
